--- a/templates/forget_password.html
+++ b/templates/forget_password.html
@@ -1,37 +1,52 @@
-<!doctype html>
-<html>
-<head>
-
-<title>Portal CTA</title>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css">
+{% extends "base.html" %}
 <link rel="stylesheet" href="{{url_for('static', filename='css/main.css')}}">
-<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e00014;">
-  <a  class="logo " href="{{url_for('index')}}"><img class=logo src="{{url_for('static', filename='DUFRY_Logo.png')}}"></a>
+{% block head %}
 
 
-  {% if current_user.is_anonymous %}
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="{{url_for('register')}}">Cadastre-se<span class="sr-only"></span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{{url_for('login')}}">Login</a>
-        </li>
-      </ul>
-  </div>
-  {% else %}
-    <p>Bem-vindo {{current_user.username}}</p>
-    <a href="{{ url_for('logout') }}">Sair</a>
-  {% endif %}
-</nav>
-
-
-
-</head>
- {% block head %}
- {% endblock %}
 <body>
+<main>
+   <h2 class="container col-6 col-md-3">Digite sua nova senha</h2>
+</div>
+<div>
+    <form class="container col-6 col-md-3" method="POST" action="">
+        {{ form.csrf_token() }}
+        {{ form.hidden_tag() }}
+        <div class="form-group">
+            {{ form.username.label}}
+            {{ form.username(class="form-control")}}
+        </div>
+        <div class="form-group">
+            {{ form.email.label }}
+            {{ form.email(class="form-control") }}
+        </div>
+        <div class="form-group">
+            {{ form.password.label }}
+            {{ form.password(class="form-control") }}
+        </div>
+        <div class="form-group">
+            {{ form.confirm_password.label }}
+            {{ form.confirm_password(class="form-control") }}
+        </div>
+
+
+        {% for field, errors in form.errors.items() %}
+            <div class="alert alert-danger" role="alert">
+                <sstrong>{{ form[field].label }}</sstrong>: {{ ', '.join(errors) }}
+            </div>
+        {% endfor %}
+        <div id="buttonRegister" class="container col-6 col-md-3">
+            {{ form.submit(class="btn bg-white text-black -btn-sm justify-content-md-center")}}
+        </div>
+    </form>
+</div>
+
+</main>
+
+
+
+
+
+
 
 <!-- Footer -->
 <footer class="text-center text-lg-start bg-light text-muted">
@@ -157,8 +172,5 @@
 <!-- Footer -->
 
 
-    {% block content %}
-    {% endblock %}
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-</html>
+{% endblock %}
