--- a/templates/formsub.html
+++ b/templates/formsub.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}form-group
+{% extends "base.html" %}
 {% block head %}
 <link rel="stylesheet" href="{{url_for('static', filename='css/main.css')}}">
 <div class="container col-6 col-md-3">
