--- a/templates/login.html
+++ b/templates/login.html
@@ -37,7 +37,7 @@
                     {{ form.submit(class="btn btn-dark btn-lg btn-block")}}
                   </div>
 
-                  <a class="small text-muted" href="">Esqueceu sua senha?</a>
+                  <a class="small text-muted" href="{{ url_for('forget_password') }}">Esqueceu sua senha?</a>
                   <p class="mb-5 pb-lg-2" style="color: #393f81;">Não possui uma conta? <a href="{{ url_for('register') }}"
                       style="color: #393f81;">Cadastra-se aqui!</a></p>
                   <a href="#!" class="small text-muted">Termos de uso.</a>
