--- a/templates/formsub.html
+++ b/templates/formsub.html
@@ -14,6 +14,10 @@
             {{ form.social_name.label }}
             {{ form.social_name(class="form-control") }}
         </div>
+         <div class="form-group">
+            {{ form.personal_email.label }}
+            {{ form.personal_email(class="form-control") }}
+        </div>
         <div class="form-group">
             {{ form.birth_date.label }}
             {{ form.birth_date(class="form-control") }}
