atualizando templates e css

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,11 +12,11 @@
   {% if current_user.is_anonymous %}
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="{{url_for('register')}}">Cadastre-se<span class="sr-only"></span></a>
+        <li class="nav-item ">
+          <a class="nav-link text-white" href="{{url_for('register')}}">Cadastre-se<span class="sr-only"></span></a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{{url_for('login')}}">Login</a>
+        <li class="nav-item ">
+          <a class="nav-link text-white" href="{{url_for('login')}}">Login</a>
         </li>
       </ul>
   </div>
@@ -155,6 +155,8 @@
   <!-- Copyright -->
 </footer>
 <!-- Footer -->
+  {% block footer %}
+  {% endblock %}
 
 
     {% block content %}
