--- a/templates/formsub_edit.html
+++ b/templates/formsub_edit.html
@@ -200,5 +200,8 @@
             {{ form.submit(class="btn bg-white text-black -btn-sm")}}
         </div>
     </form>
+{% block footer %}
+{% endblock %}<
+
 </div>
 {% endblock %}<
