--- a/templates/reset_password.html
+++ b/templates/reset_password.html
@@ -5,16 +5,18 @@
 
 <body>
 <main class="container col-6 col-md-3">
-   <h2 class="">Digite seu atual email</h2>
+   <h2 class="container col-6 col-md-3">Digite sua nova senha</h2>
 </div>
 <div class="">
     <form class="" method="POST" action="">
         {{ form.csrf_token() }}
         {{ form.hidden_tag() }}
         <div class="form-group">
-            {{ form.email_confirmation.label}}
-            {{ form.email_confirmation(class="form-control")}}
+            {{ form.new_password.label}}
+            {{ form.new_password(class="form-control")}}
         </div>
+
+
 
 
 
@@ -25,7 +27,7 @@
                 <sstrong>{{ form[field].label }}</sstrong>: {{ ', '.join(errors) }}
             </div>
         {% endfor %}
-        <div id="buttonRegister" class="container col-6 col-md-3" <a href="{{ url_for('reset_password') }}"</a>
+        <div id="buttonRegister" class="container col-6 col-md-3">
             {{ form.submit(class="btn bg-white text-black -btn-sm justify-content-md-center")}}
         </div>
     </form>
