atualizando templates e css

--- a/templates/forget_password.html
+++ b/templates/forget_password.html
@@ -25,7 +25,7 @@
                 <sstrong>{{ form[field].label }}</sstrong>: {{ ', '.join(errors) }}
             </div>
         {% endfor %}
-        <div id="buttonRegister" class="container col-6 col-md-3" <a href="{{ url_for('reset_password') }}"</a>
+        <div id="buttonRegister" class="container col-6 col-md-3" "
             {{ form.submit(class="btn bg-white text-black -btn-sm justify-content-md-center")}}
         </div>
     </form>
