atualizando templates e css

--- a/templates/forget_password.html
+++ b/templates/forget_password.html
@@ -16,16 +16,12 @@
             {{ form.email_confirmation(class="form-control")}}
         </div>
 
-
-
-
-
         {% for field, errors in form.errors.items() %}
             <div class="alert alert-danger" role="alert">
                 <sstrong>{{ form[field].label }}</sstrong>: {{ ', '.join(errors) }}
             </div>
         {% endfor %}
-        <div id="buttonRegister" class="container col-6 col-md-3" "
+        <div id="buttonRegister" class="container col-6 col-md-3">
             {{ form.submit(class="btn bg-white text-black -btn-sm justify-content-md-center")}}
         </div>
     </form>
