--- a/templates/forget_password.html
+++ b/templates/forget_password.html
@@ -1,41 +1,62 @@
 {% extends "base.html" %}
-<link rel="stylesheet" href="{{url_for('static', filename='css/main.css')}}">
 {% block head %}
 
 
 <body>
-<main class="container col-6 col-md-3">
-   <h2 class="">Digite seu atual email</h2>
 </div>
-<div class="">
-    <form class="" method="POST" action="">
-        {{ form.csrf_token() }}
-        {{ form.hidden_tag() }}
-        <div class="form-group">
-            {{ form.email_confirmation.label}}
-            {{ form.email_confirmation(class="form-control")}}
-        </div>
-
-        {% for field, errors in form.errors.items() %}
-            <div class="alert alert-danger" role="alert">
-                <sstrong>{{ form[field].label }}</sstrong>: {{ ', '.join(errors) }}
+<section class="vh-100" style="background-color: #030303;">
+  <div class="container py-5 h-100">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="col col-xl-10">
+        <div class="card" style="border-radius: 1rem;">
+          <div class="row g-0">
+            <div class="col-md-6 col-lg-5 d-none d-md-block">
+              <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/img1.webp"
+                alt="login form" class="img-fluid" style="border-radius: 1rem 0 0 1rem;" />
             </div>
-        {% endfor %}
-        <div id="buttonRegister" class="container col-6 col-md-3">
-            {{ form.submit(class="btn bg-white text-black -btn-sm justify-content-md-center")}}
+            <div class="col-md-6 col-lg-7 d-flex align-items-center">
+              <div class="card-body p-4 p-lg-5 text-black">
+
+                <form action="" method="post">
+                  {{ form.csrf_token() }}
+                  {{ form.hidden_tag() }}
+                  <div class="d-flex align-items-center mb-3 pb-1">
+                    <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
+                    <span class="h1 fw-bold mb-0">Portal <b>CTA</b></span>
+                  </div>
+
+                  <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Digite seu email</h5>
+
+                  <div class="col-md-6 col-lg-7 d-flex align-items-center">
+                    {{ form.email_confirmation.label}}
+                    {{ form.email_confirmation(class="form-control")}}
+                  </div>
+
+                  <div class="form-outline mb-4">
+
+                  </div>
+
+                  <div class="pt-1 mb-4">
+                    {{ form.submit(class="btn btn-dark btn-lg btn-block")}}
+                  </div>
+
+
+
+            </div>
+          </div>
         </div>
-    </form>
-</div>
-
-</main>
-
-
+      </div>
+    </div>
+  </div>
+</section>
 
 
 
 
 
-<
+
+
+
 
 
 </body>
